[TASK] Set the styleguide '<body>' element to overflow:hidden; to prevent elements from escaping out of bounds

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -18,6 +18,7 @@
 .kssBody {
 	background: @baseBackgroundColor;
 	margin: 0;
+	overflow: hidden;
 }
 
 /* Header */
